--- a/shippable.yml
+++ b/shippable.yml
@@ -12,6 +12,17 @@ python:
   - 3.5
   - pypy
   - ppy3
+  
+services:
+  - mysql
+  - postgres
+  - mongodb
+  - elasticsearch
+  - redis
+  - memcache
+  - rabbitmq
+  #- selenium
+  #- sqlite
 
 build:
   pre_ci_boot:
