--- a/shippable.yml
+++ b/shippable.yml
@@ -23,3 +23,7 @@ build:
     - return 0
   post_ci:
     - return 0
+  integrations:                 
+  hub:
+    - integrationName: docker   ##replace with your integration name
+      type: docker
