--- a/shippable.yml
+++ b/shippable.yml
@@ -13,6 +13,7 @@ build:
     - echo $COMMIT_MESSAGE
     - echo $test
     - ls
+    - python semaphore.py
   on_success:
     - df -h
     - df -i 
