--- a/shippable.yml
+++ b/shippable.yml
@@ -6,6 +6,10 @@ language: python
 python:
   - 2.7
 
+env:
+  - test_env: "echo lol"
+  - test_env: "lol"
+
 build:
   ci:
     - printenv
@@ -13,6 +17,7 @@ build:
     - echo $COMMIT_MESSAGE
     - echo $test
     - ls
+    - eval $test_env
     - python sempaphore.py
   on_success:
     - df -h
