--- a/shippable.yml
+++ b/shippable.yml
@@ -16,12 +16,11 @@ build:
     image_name: drydock/u16pytall
     image_tag: v5.8.2
     pull: true
-    options: "-m=1024m"
+    options: "-m=25m"
 
 
   ci:
-    - printenv
-    - wget https://download.docker.com/linux/static/stable/x86_64/docker-$DOCKER_VERSION-ce.tgz -P /tmp/docker
+    - wget https://download.docker.com/linux/static/stable/x86_64/docker-17.06.0-ce.tgz -P /tmp/docker
     - cat /tmp/docker/docker
 #integrations:                 
 #  hub:
