--- a/shippable.yml
+++ b/shippable.yml
@@ -6,11 +6,12 @@ language: python
 python:
   - 2.7
 
-env:
-  - test_env="echo lol"
-  - test_env="lol"
-
 build:
+  pre_ci_boot:
+    pre_ci_boot:
+     image_name: drydockaarch64/u16pyt
+     image_tag: master
+     pull: true
   ci:
     - python -V
 #integrations:                 
